[package]
name = "tm1637"
version = "0.1.0"
edition = "2021"

[lib]
name = "tm1637"
path = "src/lib.rs"

[dependencies]
embedded-hal = "1.0.0"
heapless = "0.8.0"
log = "0.4.21"
critical-section = "1.2.0"

# Valinnaiset alustakohtaiset riippuvuudet
esp-hal = { version = "0.22.0", optional = true }
esp-backtrace = { version = "0.14.2", optional = true }
rp-hal = { version = "0.0.2", optional = true }
rppal = { version = "0.14", optional = true }

[features]
# Ei oletusalustaa – käyttäjän on valittava haluamansa
default = []

# ESP32-tuet
esp32 = [
    "esp-hal/esp32",
    "esp-backtrace",
    "esp-backtrace/esp32",
    "esp-backtrace/exception-handler",
    "esp-backtrace/panic-handler",
    "esp-backtrace/println"
]
esp32s2 = [
    "esp-hal/esp32s2",
    "esp-backtrace",
    "esp-backtrace/esp32s2",
    "esp-backtrace/exception-handler",
    "esp-backtrace/panic-handler",
    "esp-backtrace/println"
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace",
    "esp-backtrace/esp32s3",
    "esp-backtrace/exception-handler",
    "esp-backtrace/panic-handler",
    "esp-backtrace/println"
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-backtrace",
    "esp-backtrace/esp32c3",
    "esp-backtrace/exception-handler",
    "esp-backtrace/panic-handler",
    "esp-backtrace/println"
]

# Raspberry Pi Pico
rp-pico = ["rp-hal"]

# Raspberry Pi 4/5 Linux GPIO
rp-linux = ["rppal"]

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
lto = "fat"
overflow-checks = false
codegen-units = 1
